# tuxlock

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake-modules/: FindLIBPARTED.cmake
src/: TuxLock.cpp  TuxLock.hpp  TuxlockCLI.cpp  TuxlockCLI.h
src/CLI/: CLI.cpp  CLI.hpp
src/Drive/: Generic.cpp  Generic.h  Generic.hpp  NVMe.cpp  NVMe.hpp
